Update to latest dep & plugins versions